Implemented JPA API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+# makes all actuator endpoints visible
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+# add data to the actuator/info page
+info.app.name=spring boot application
+info.app.description= Rest JPA API application
+# variable to be accessed thru @Value annotation
+user.username=Thomas Smith
+user.team=Springers
+# setting up database
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&saverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=H13ged1955%
