--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ info.app.description= Rest JPA API application
 # variable to be accessed thru @Value annotation
 user.username=Thomas Smith
 user.team=Springers
-# setting up database
+# setting up database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&saverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=H13ged1955%
